# basic-py-backend

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/: main.py
