[project]
name = "basic-py-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.0.1", "pyright>=1.1.389", "ruff>=0.8.1"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D213", "ISC001"]
